Slim down the styles
Just import the basics for USWDS instead of the whole thing. I often
prefer to build my own styles from their tokens because I don't like to
bake the margins and paddings into the components, but use layouts to
manage spacing. This just imports some of their basic styles and
utilities, which reduces the compiled stiles from about 450k to 255k.

--- a/services/ui/src/styles/_index.scss
+++ b/services/ui/src/styles/_index.scss
@@ -1,2 +1,6 @@
 @forward "uswds-theme";
-@forward "uswds";
+@forward "uswds-global";
+@forward "uswds-helpers";
+@forward "uswds-typography";
+
+@forward "uswds-utilities/src/styles";
