Reformat files with Prettier
This will get rid of the errors from Prettier when linting.

--- a/services/ui/src/styles/_index.scss
+++ b/services/ui/src/styles/_index.scss
@@ -1,6 +1,6 @@
-@forward "uswds-theme";
-@forward "uswds-global";
-@forward "uswds-helpers";
-@forward "uswds-typography";
+@forward 'uswds-theme';
+@forward 'uswds-global';
+@forward 'uswds-helpers';
+@forward 'uswds-typography';
 
-@forward "uswds-utilities/src/styles";
+@forward 'uswds-utilities/src/styles';
