--- a/services/ui/src/styles/_index.scss
+++ b/services/ui/src/styles/_index.scss
@@ -1,8 +1,8 @@
-@forward 'uswds-theme';
-@forward 'uswds-global';
-@forward 'uswds-helpers';
-@forward 'uswds-typography';
+@forward "uswds-theme";
+@forward "uswds-global";
+@forward "uswds-helpers";
+@forward "uswds-typography";
 
-@forward 'global';
+@forward "global";
 
-@forward 'uswds-utilities/src/styles';
+@forward "uswds-utilities/src/styles";
