--- a/services/ui/src/styles/_uswds-theme.scss
+++ b/services/ui/src/styles/_uswds-theme.scss
@@ -1,10 +1,10 @@
-@use 'uswds-core' with (
+@use "uswds-core" with (
   $theme-show-notifications: false,
 
   $output-these-utilities: (
-    'align-items',
-    'border',
-    'margin',
-    'padding'
+    "align-items",
+    "border",
+    "margin",
+    "padding",
   )
 );
