--- a/services/ui/src/styles/_uswds-theme.scss
+++ b/services/ui/src/styles/_uswds-theme.scss
@@ -2,6 +2,7 @@
   $theme-show-notifications: false,
 
   $output-these-utilities: (
+    "add-list-reset",
     "align-items",
     "border",
     "display",
