Swap units(2) for --space-2 in the layouts
I had to work around the problem of importing the USWDS core for the
tokens in the layout module by creating a custom prop for `units(2)`
that I could use for gap/margin.

Right now it's just hard-coded, but this might actually be a good way to
go about working with the tokens, so I should maybe find a way to
iterate over palettes and auto-generate custom props.

--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -1,15 +1,13 @@
-@use "uswds-core" as uswds;
-
 [data-layout="cluster"] {
   flex-direction: row;
   flex-wrap: wrap;
-  gap: uswds.units(2);
+  gap: var(--space-2);
 
   display: flex;
 }
 
 [data-layout="grid"] {
-  gap: var(--gutter, #{uswds.units(2)});
+  gap: var(--gutter, var(--space-2));
 
   display: grid;
 
@@ -26,5 +24,5 @@
 }
 
 :where(.flow) > * + * {
-  margin-top: var(--space, uswds.units(2));
+  margin-top: var(--space, var(--space-s));
 }
