Convert our modules to mixins
It's an emerging best practice in the Sass community that partials
should never render CSS, so I've wrapped all of our styles in a css
mixin that we can include when we build our final stylesheet.

--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -1,28 +1,30 @@
-[data-layout="cluster"] {
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: var(--space-2);
+@mixin css {
+  [data-layout="cluster"] {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--space-2);
 
-  display: flex;
-}
+    display: flex;
+  }
 
-[data-layout="grid"] {
-  gap: var(--gutter, var(--space-2));
+  [data-layout="grid"] {
+    gap: var(--gutter, var(--space-2));
 
-  display: grid;
+    display: grid;
 
-  grid-auto-rows: var(--row-size);
+    grid-auto-rows: var(--row-size);
 
-  grid-template-columns: repeat(
-    auto-fit,
-    var(--column-size, minmax(min(30rem, 100%), 1fr))
-  );
-}
+    grid-template-columns: repeat(
+      auto-fit,
+      var(--column-size, minmax(min(30rem, 100%), 1fr))
+    );
+  }
 
-[data-colspan="full"] {
-  grid-column: 1 / -1;
-}
+  [data-colspan="full"] {
+    grid-column: 1 / -1;
+  }
 
-:where(.flow) > * + * {
-  margin-top: var(--space, var(--space-s));
+  :where(.flow) > * + * {
+    margin-top: var(--space, var(--space-s));
+  }
 }
