--- a/services/ui/src/styles/_global.scss
+++ b/services/ui/src/styles/_global.scss
@@ -1,30 +1,17 @@
-* {
-  margin: 0;
-}
+@mixin css {
+  body {
+    isolation: isolate;
+    flex-direction: column;
 
-html,
-body {
-  overflow: hidden;
+    display: flex;
 
-  height: 100%;
-}
+    height: 100%;
+  }
 
-body {
-  isolation: isolate;
-  flex-direction: column;
+  main {
+    flex: 1 1 auto;
 
-  display: flex;
-
-  height: 100%;
-}
-
-main {
-  flex: 1 1 auto;
-
-  overflow-y: auto;
-  scrollbar-gutter: stable;
-}
-
-svg {
-  display: block;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+  }
 }
