Convert the grid column full utility to a class
Utilities make a lot of sense to me as classes, so I redefined the
selector to a class selector.

--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -20,11 +20,12 @@
     );
   }
 
-  [data-colspan="full"] {
-    grid-column: 1 / -1;
-  }
-
+  // Layout utilities
   :where(.flow) > * + * {
     margin-top: var(--space, var(--space-s));
+  }
+
+  .grid-col-full {
+    grid-column: 1 / -1;
   }
 }
