Slim down our USWDS forwards
uswds-global pulls in a lot of typographic styles we don't need and
normalizes things in a way I don't want for the application. Replacing
it with a subset of the modules forwarded by uswds-global cuts our
styles down by about another 30k.

--- a/services/ui/src/styles/_uswds.scss
+++ b/services/ui/src/styles/_uswds.scss
@@ -1,6 +1,17 @@
+// Our settings
 @forward "uswds-theme";
-@forward "uswds-global";
-@forward "uswds-helpers";
-@forward "uswds-typography";
 
+// @font-face definitions
+@forward "uswds-fonts";
+
+// Defaults for HTML elements, important for setting fonts
+@forward "uswds-elements";
+
+// .usa-sr-only and .usa-focus
+@forward "uswds-helpers";
+
+// USWDS components
+@forward "usa-dark-background";
+
+// Utilities
 @forward "uswds-utilities/src/styles";
