Style the application title
Add utilities for the font weight and color so that I can style the
application title. It's only another 5k, and may come in handy later
anyway. We may slim this down a little with palettes, too.

--- a/services/ui/src/styles/_uswds-theme.scss
+++ b/services/ui/src/styles/_uswds-theme.scss
@@ -6,7 +6,9 @@
   $theme-show-notifications: false,
 
   $output-these-utilities: (
+    "color",
     "flex",
+    "font-weight",
     "padding",
   )
 );
