--- a/services/ui/src/styles/index.scss
+++ b/services/ui/src/styles/index.scss
@@ -2,6 +2,7 @@
 
 @use "default";
 @use "layout";
+@use "overrides";
 @use "reset";
 
 @layer reset {
@@ -16,10 +17,10 @@
   @include meta.load-css("uswds");
 }
 
-@layer layout {
-  @include layout.css;
+@layer override {
+  @include overrides.css;
 }
 
-@layer utility {
-  @include meta.load-css("uswds-utilities");
+@layer layout {
+  @include layout.css;
 }
