--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -2,6 +2,7 @@
   [data-layout="cluster"] {
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
     gap: var(--space-2);
 
     display: flex;
