Fix default space value for flow utility
The variable is --space-2, not --space-s.

--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -23,7 +23,7 @@
 
   // Layout utilities
   :where(.flow) > * + * {
-    margin-top: var(--space, var(--space-s));
+    margin-top: var(--space, var(--space-2));
   }
 
   .grid-col-full {
