Add utility classes to style headings

--- a/services/ui/src/styles/_uswds-theme.scss
+++ b/services/ui/src/styles/_uswds-theme.scss
@@ -5,9 +5,13 @@
 @use "uswds-core" with (
   $theme-show-notifications: false,
 
+  $font-palettes: (
+    "palette-font-theme-roles",
+  ),
   $output-these-utilities: (
     "color",
     "flex",
+    "font",
     "font-weight",
     "padding",
   )
