--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -13,12 +13,18 @@
 
     display: grid;
 
-    grid-auto-rows: var(--row-size);
-
+    grid-auto-rows: var(--row-size, auto);
     grid-template-columns: repeat(
       auto-fit,
       var(--column-size, minmax(min(30rem, 100%), 1fr))
     );
+  }
+
+  [data-layout="stack"] {
+    flex-direction: column;
+    gap: var(--gutter, var(--space-2));
+
+    display: flex;
   }
 
   // Layout utilities
