--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>@layer reset, default, layout, utility</style>
     <link rel="stylesheet" href="/static/reset.css" />
+    <link rel="stylesheet" href="/static/layout.css" />
   </head>
   <body>
     {% include "includes/header.html" %}
