Move the CSS files into a CSS directory

--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>@layer reset, default, layout, utility</style>
-    <link rel="stylesheet" href="/static/reset.css" />
-    <link rel="stylesheet" href="/static/layout.css" />
+    <link rel="stylesheet" href="/static/css/reset.css" />
+    <link rel="stylesheet" href="/static/css/layout.css" />
   </head>
   <body>
     {% include "includes/header.html" %}
