Style the header
I added a number of tokens and utilities from USWDS to style the header.

--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -1,6 +1,6 @@
-<header class="cluster">
+<header class="cluster justify padding-2 bg-primary-darker text-white">
   <h1 class="text-bold">Unified Graphics</h1>
-  <form data-layout="cluster">
+  <form class="cluster">
     <select>
       {% for variable in variables -%}
           <option>{{ variable }}</option>
