Add a main element with some padding

--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     {% include "includes/header.html" %}
-    {% block body %}{% endblock %}
+    <main class="padding-2">
+      {% block main %}{% endblock %}
+    </main>
   </body>
 </html>
