Remove an unused CSS class

--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -1,5 +1,5 @@
 <header class="cluster justify padding-2 bg-primary-darker text-white">
-  <h1 class="text-bold">Unified Graphics</h1>
+  <h1>Unified Graphics</h1>
   <form class="cluster" method="GET">
     <select name="variable">
       {% for variable in variables -%}
