Quick port of the scalar display for testing
I copied over the components for the histogram and map to be able to
test the server-rendered UI and compare it to the Svelte version.

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -47,4 +47,22 @@
     background-color: var(--surface-1);
     color: var(--text-1);
   }
+
+  body,
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  body > header {
+    flex: 0 0 auto;
+  }
+
+  body > main {
+    flex: 1 1 auto;
+  }
+
+  main > * {
+    flex: 1 1 auto;
+  }
 }
