--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>@layer reset, default, layout, utility</style>
-    <link rel="stylesheet" href="/static/css/reset.css" />
-    <link rel="stylesheet" href="/static/css/default.css" />
-    <link rel="stylesheet" href="/static/css/layout.css" />
-    <link rel="stylesheet" href="/static/css/utility.css" />
-  </head>
-  <body>
-    {% include "includes/header.html" %}
-    <main class="padding-2">
-      {% block main %}{% endblock %}
-    </main>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    @layer reset,
+    default,
+    layout,
+    utility;
+  </style>
+  <link rel="stylesheet" href="/static/css/reset.css" />
+  <link rel="stylesheet" href="/static/css/default.css" />
+  <link rel="stylesheet" href="/static/css/layout.css" />
+  <link rel="stylesheet" href="/static/css/utility.css" />
+  <script src="/static/js/d3.min.js" defer></script>
+  <script type="module" src="/static/js/ChartContainer.js"></script>
+  <script type="module" src="/static/js/ChartHistogram.js"></script>
+  <script type="module" src="/static/js/ChartMap.js"></script>
+</head>
+
+<body>
+  {% include "includes/header.html" %}
+  <main class="padding-2">{% block main %}{% endblock %}</main>
+</body>
+
 </html>
