Fix CSS so the visualizations display again
The introduction of the app containing div required a few changes to the
CSS.

--- a/services/ui/src/styles/_default.scss
+++ b/services/ui/src/styles/_default.scss
@@ -1,13 +1,22 @@
 @mixin css {
+  #app,
   body {
+    overflow: clip;
+  }
+
+  #app {
     isolation: isolate;
     flex-direction: column;
 
     display: flex;
+
+    height: 100%;
   }
 
   main {
     flex: 1 1 auto;
+
+    overflow: auto;
 
     contain: strict;
   }
