Add linters and formatters for CSS/JS
Copy over the package.json and linter configs from the UI service.

We're switching over to alphabetical ordering of CSS declarations
because it's just easier to maintain, and some consistent order is
better than none. I ran the CSS files through the formatter so that they
will pass the linting checks.

--- a/services/api/src/unified_graphics/static/css/reset.css
+++ b/services/api/src/unified_graphics/static/css/reset.css
@@ -12,18 +12,19 @@
   }
 
   body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+      Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
   }
 
   svg {
     display: block;
   }
 
-  [role=list] {
+  [role="list"] {
     list-style: none;
   }
 
-  [role=list] > li {
+  [role="list"] > li {
     padding: 0;
   }
 }
