--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -18,6 +18,7 @@
   <script src="/static/js/d3.min.js" defer></script>
   <script type="module" src="/static/js/ChartContainer.js"></script>
   <script type="module" src="/static/js/ChartHistogram.js"></script>
+  <script type="module" src="/static/js/Chart2DHistogram.js"></script>
   <script type="module" src="/static/js/ChartMap.js"></script>
 </head>
 
