--- a/services/api/src/unified_graphics/templates/layouts/diag/scalar.html
+++ b/services/api/src/unified_graphics/templates/layouts/diag/scalar.html
@@ -5,14 +5,20 @@
   {% set data_url %}/diag/{{ form.variable.name.lower() }}/{{ form.initialization_time }}/{{ minim_loop }}/{% endset -%}
   <div class="grid" style="--row-size: minmax(20rem, 1fr)">
     <chart-container>
-      <span class="axis-y title" slot="title-y">Observation Count</span>
-      <chart-histogram id="distribution-{{ minim_loop }}" src="{{ data_url }}"></chart-histogram>
-      <span class="axis-x title" slot="title-x">Observation - Forecast</span>
+      {% if form.variable.value == "uv" -%}
+        <span class="axis-y title" slot="title-y">v (Observation &minus; Forecast)</span>
+        <chart-2dhistogram id="distribution-{{ minim_loop }}" src="{{ data_url }}"></chart-2dhistogram>
+        <span class="axis-x title" slot="title-x">u (Observation &minus; Forecast)</span>
+      {%- else -%}
+        <span class="axis-y title" slot="title-y">Observation Count</span>
+        <chart-histogram id="distribution-{{ minim_loop }}" src="{{ data_url }}"></chart-histogram>
+        <span class="axis-x title" slot="title-x">Observation &minus; Forecast</span>
+      {%- endif %}
     </chart-container>
     <chart-container>
       <chart-map id="observations-{{ minim_loop }}" src="{{ data_url }}"></chart-map>
       <color-ramp slot="legend" for="observations-{{ minim_loop }}" class="font-ui-3xs" format="s"
-        >Observation - Forecast</color-ramp>
+        >Observation &minus; Forecast</color-ramp>
     </chart-container>
   </div>
 {%- endfor %}
