Consolidate all of the stylesheets into one
Use a single stylesheet that uses @import to merge our stylesheets.
We'll almost certainly end up bundling these with LightningCSS or
something.

--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -11,10 +11,7 @@
     layout,
     utility;
   </style>
-  <link rel="stylesheet" href="/static/css/reset.css" />
-  <link rel="stylesheet" href="/static/css/default.css" />
-  <link rel="stylesheet" href="/static/css/layout.css" />
-  <link rel="stylesheet" href="/static/css/utility.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
   <script src="/static/js/d3.min.js" defer></script>
   <script type="module" src="/static/js/ChartContainer.js"></script>
   <script type="module" src="/static/js/ChartHistogram.js"></script>
@@ -26,5 +23,7 @@
   {% include "includes/header.html" %}
   <main class="padding-2">{% block main %}{% endblock %}</main>
 </body>
+
+</html>
 
 </html>
