--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -9,6 +9,7 @@
     @layer reset,
     default,
     layout,
+    page,
     utility;
   </style>
   <link rel="stylesheet" href="/static/css/style.css" />
@@ -23,6 +24,10 @@
   {% include "includes/header.html" %}
   <main class="padding-2">{% block main %}{% endblock %}</main>
 </body>
+
+</html>
+
+</html>
 
 </html>
 
