--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -22,6 +22,22 @@
 <body>
   {% include "includes/header.html" %}
   <main class="padding-2">{% block main %}{% endblock %}</main>
+  <script>
+    async function registerServiceWorker() {
+      if (!("serviceWorker" in navigator)) return;
+
+      try {
+        const registration = await navigator.serviceWorker.register(
+          "/serviceworker.js",
+          {scope: "/"}
+        );
+      } catch (error) {
+        console.error(`Service Worker registration failed: ${error}`);
+      }
+    }
+
+    registerServiceWorker();
+  </script>
 </body>
 
 </html>
