--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -17,6 +17,7 @@
   <script type="module" src="/static/js/ChartHistogram.js"></script>
   <script type="module" src="/static/js/Chart2DHistogram.js"></script>
   <script type="module" src="/static/js/ChartMap.js"></script>
+  <script type="module" src="/static/js/ColorRamp.js"></script>
 </head>
 
 <body>
