Prepare the JavaScript for bundling in production
Create some entry points for the various pages that we’ll need so that
we can easily bundle our JS for production. To make the distinction
between our entry points and the files they import, I’ve moved all of
the components and library files into separate folders.

--- a/services/api/src/unified_graphics/templates/layouts/base.html
+++ b/services/api/src/unified_graphics/templates/layouts/base.html
@@ -12,11 +12,7 @@
     utility;
     </style>
     <link rel="stylesheet" href="/static/css/style.css" />
-    <script type="module" src="/static/js/ChartContainer.js"></script>
-    <script type="module" src="/static/js/ChartHistogram.js"></script>
-    <script type="module" src="/static/js/Chart2DHistogram.js"></script>
-    <script type="module" src="/static/js/ChartMap.js"></script>
-    <script type="module" src="/static/js/ColorRamp.js"></script>
+    {% block head %}{% endblock %}
   </head>
 
   <body>
