--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -29,6 +29,20 @@
     --base-darker: var(--gray-cool-70);
     --base-darkest: var(--gray-90);
 
+    /* Typography */
+    --font-family-system: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+      Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
+
+    --font-size-md: 1rem;
+    --font-size-xl: 2rem;
+
+    --line-height-2: 1.15;
+    --line-height-4: 1.5;
+
+    --heading-2: bold var(--font-size-xl) / var(--line-height-2)
+      var(--font-family-system);
+    --body-1: var(--font-size-md) / var(--line-height-4) var(--font-family-system);
+
     /* Size Tokens */
     --space-05: 0.25rem;
     --space-2: 1rem;
@@ -51,6 +65,10 @@
   html {
     background-color: var(--surface-1);
     color: var(--text-1);
+  }
+
+  body {
+    font: var(--body-1);
   }
 
   body,
