--- a/services/api/src/unified_graphics/static/css/utility.css
+++ b/services/api/src/unified_graphics/static/css/utility.css
@@ -14,6 +14,15 @@
     color: var(--gray-0);
   }
 
+  /* Typography */
+  .body-1 {
+    font: var(--body-1);
+  }
+
+  .heading-2 {
+    font: var(--heading-2);
+  }
+
   /* Spacing */
   .padding-2 {
     padding: var(--space-2);
