--- a/services/api/src/unified_graphics/templates/layouts/diag.html
+++ b/services/api/src/unified_graphics/templates/layouts/diag.html
@@ -1,13 +1,19 @@
 {% extends "layouts/base.html" %}
 
 {% block head %}
-  {%- set scriptname = "vectordiag.js" if form.variable.value == "uv" else "scalardiag.js" -%}
-  <script type="module" src="{{ url_for('static', filename='js/' + scriptname) }}"></script>
+  {% if form.get("variable", None) -%}
+    {%- set scriptname = "vectordiag.js" if form.variable == "uv" else "scalardiag.js" -%}
+    <script type="module" src="{{ url_for('static', filename='js/' + scriptname) }}"></script>
+  {%- endif %}
 {% endblock %}
 
 {% block main -%}
 {% for minim_loop in ["ges", "anl"] -%}
-  {% set data_url %}/diag/{{ form.variable.name.lower() }}/{{ form.initialization_time }}/{{ minim_loop }}/{% endset -%}
+  {% if not show_dialog -%}
+    {% set data_url %}/diag/{{ form.variable.name.lower() }}/{{ form.initialization_time }}/{{ minim_loop }}/{% endset -%}
+  {%- else -%}
+    {% set data_url = "" %}
+  {%- endif %}
   <div class="grid" style="--row-size: minmax(20rem, 1fr)">
     <chart-container class="padding-2 radius-md bg-white shadow-1">
       {% if form.variable.value == "uv" -%}
