Fix a couple of template errors
There were some exceptions thrown by the diag template that were
preventing the page from rendering correctly. I also had to change the
styles for the dialog so that display is only set when it’s open,
otherwise it’s visible all the time.

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -88,7 +88,6 @@
     border: none;
     border-radius: var(--radius-lg);
     box-shadow: var(--shadow-4);
-    display: grid;
     gap: var(--space, var(--space-2));
     grid-template-rows: auto 1fr auto;
     inline-size: min(90vi, var(--size-mobile-lg));
@@ -98,6 +97,10 @@
     max-block-size: 90dvb;
     overflow: clip;
     position: fixed;
+  }
+
+  dialog[open] {
+    display: grid;
   }
 
   dialog::backdrop {
