--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -4,7 +4,7 @@
   <select id="{{ name }}" name="{{ name }}" {% if not options %} disabled{% endif %}>
     <option></option>
     {% for opt in options -%}
-    <option value="{{ opt }}" {% if opt.value==current %} selected{% endif %}>
+    <option value="{{ opt }}" {% if opt==current %} selected{% endif %}>
       {{- opt -}}
     </option>
     {%- endfor %}
@@ -14,7 +14,7 @@
 
 <header class="cluster justify padding-2 bg-primary-darker text-white">
   <h1>Unified Graphics</h1>
-  <button>Configure</button>
+  <button onclick="document.getElementById('model-dialog').showModal()">Configure</button>
 </header>
 
 <dialog id="model-dialog">
